# HMNet-with-BERT

./: .gitignore  README.md  main.py  pyproject.toml
conf/: dev_pretrain.toml  news_pretrain.toml
data/: README.md
datasets/: ami.py  base.py
hmnet_with_bert/: base.py  logger.py
hmnet_with_bert/batch/: base.py
hmnet_with_bert/tasks/: base.py
hmnet_with_bert/tests/: test_pretrain_conf.toml
hmnet_with_bert/tests/batch/: test_base.py
log/: README.md
tests/: base.py
tests/datasets/: test_base.py
