[tool.poetry]
name = "hmnet-with-bert"
version = "0.1.0"
description = "https://github.com/microsoft/HMNet modified with BERT"
authors = ["Xiaonuo Gantan <xgantan@datasvm.io>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
toml = "^0.10.2"
pytorch = "^1.0.2"
torchvision = "^0.9.0"
torchaudio = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
